--- a/part 3/PhonebookBackend/package.json
+++ b/part 3/PhonebookBackend/package.json
@@ -10,7 +10,8 @@
     "build:ui": "rd /s/q build && cd ../PhonebookFrontend/ && npm run build && move build ../PhonebookBackend/",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.4.1",
     "nodemon": "^2.0.15"
   }
 }
